// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstallBrowserExtensionAlert BITBUCKETSERVER (Chrome) 1`] = `
<DocumentFragment>
  <div
    class="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      class="d-flex align-items-center"
    >
      <p
        class="my-0 mr-3"
      >
        <a
          class="alertLink"
          href="https://chrome.google.com/webstore/detail/dgjhfomjieaadpoljlnidmbgkdffpack"
          rel="noopener noreferrer"
          target="_blank"
        >
          Install the Sourcegraph browser extension
        </a>
         to add code intelligence to pull requests and file views on Bitbucket Server.
      </p>
    </div>
    <button
      aria-label="Close alert"
      class="btn btn-icon test-close-alert"
      type="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`InstallBrowserExtensionAlert BITBUCKETSERVER (native integration) 1`] = `
<DocumentFragment>
  <div
    class="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      class="d-flex align-items-center"
    >
      <p
        class="my-0 mr-3"
      >
        Sourcegraph's code intelligence will follow you to your code host. Your site admin set up the Sourcegraph native integration for Bitbucket Server. 
        <a
          class="alertLink"
          href="https://docs.sourcegraph.com/integration/browser_extension"
          rel="noopener"
          target="_blank"
        >
          Learn more
        </a>
         or 
        <a
          class="alertLink"
          href=""
          rel="noopener"
          target="_blank"
        >
          try it out
        </a>
      </p>
    </div>
    <button
      aria-label="Close alert"
      class="btn btn-icon test-close-alert"
      type="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`InstallBrowserExtensionAlert BITBUCKETSERVER (non-Chrome) 1`] = `
<DocumentFragment>
  <div
    class="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      class="d-flex align-items-center"
    >
      <p
        class="my-0 mr-3"
      >
        Get code intelligence while browsing files and reviewing pull requests on Bitbucket Server. 
        <a
          class="alertLink"
          href="/help/integration/browser_extension"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn more about Sourcegraph Chrome and Firefox extensions
        </a>
      </p>
    </div>
    <button
      aria-label="Close alert"
      class="btn btn-icon test-close-alert"
      type="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`InstallBrowserExtensionAlert GITHUB (Chrome) 1`] = `
<DocumentFragment>
  <div
    class="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      class="d-flex align-items-center"
    >
      <p
        class="my-0 mr-3"
      >
        <a
          class="alertLink"
          href="https://chrome.google.com/webstore/detail/dgjhfomjieaadpoljlnidmbgkdffpack"
          rel="noopener noreferrer"
          target="_blank"
        >
          Install the Sourcegraph browser extension
        </a>
         to add code intelligence to pull requests and file views on GitHub.
      </p>
    </div>
    <button
      aria-label="Close alert"
      class="btn btn-icon test-close-alert"
      type="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`InstallBrowserExtensionAlert GITHUB (native integration) 1`] = `
<DocumentFragment>
  <div
    class="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      class="d-flex align-items-center"
    >
      <p
        class="my-0 mr-3"
      >
        Sourcegraph's code intelligence will follow you to your code host. Your site admin set up the Sourcegraph native integration for GitHub. 
        <a
          class="alertLink"
          href="https://docs.sourcegraph.com/integration/browser_extension"
          rel="noopener"
          target="_blank"
        >
          Learn more
        </a>
         or 
        <a
          class="alertLink"
          href=""
          rel="noopener"
          target="_blank"
        >
          try it out
        </a>
      </p>
    </div>
    <button
      aria-label="Close alert"
      class="btn btn-icon test-close-alert"
      type="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`InstallBrowserExtensionAlert GITHUB (non-Chrome) 1`] = `
<DocumentFragment>
  <div
    class="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      class="d-flex align-items-center"
    >
      <p
        class="my-0 mr-3"
      >
        Get code intelligence while browsing files and reviewing pull requests on GitHub. 
        <a
          class="alertLink"
          href="/help/integration/browser_extension"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn more about Sourcegraph Chrome and Firefox extensions
        </a>
      </p>
    </div>
    <button
      aria-label="Close alert"
      class="btn btn-icon test-close-alert"
      type="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`InstallBrowserExtensionAlert GITLAB (Chrome) 1`] = `
<DocumentFragment>
  <div
    class="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      class="d-flex align-items-center"
    >
      <p
        class="my-0 mr-3"
      >
        <a
          class="alertLink"
          href="https://chrome.google.com/webstore/detail/dgjhfomjieaadpoljlnidmbgkdffpack"
          rel="noopener noreferrer"
          target="_blank"
        >
          Install the Sourcegraph browser extension
        </a>
         to add code intelligence to merge requests and file views on GitLab.
      </p>
    </div>
    <button
      aria-label="Close alert"
      class="btn btn-icon test-close-alert"
      type="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`InstallBrowserExtensionAlert GITLAB (native integration) 1`] = `
<DocumentFragment>
  <div
    class="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      class="d-flex align-items-center"
    >
      <p
        class="my-0 mr-3"
      >
        Sourcegraph's code intelligence will follow you to your code host. Your site admin set up the Sourcegraph native integration for GitLab. 
        <a
          class="alertLink"
          href="https://docs.sourcegraph.com/integration/browser_extension"
          rel="noopener"
          target="_blank"
        >
          Learn more
        </a>
         or 
        <a
          class="alertLink"
          href=""
          rel="noopener"
          target="_blank"
        >
          try it out
        </a>
      </p>
    </div>
    <button
      aria-label="Close alert"
      class="btn btn-icon test-close-alert"
      type="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`InstallBrowserExtensionAlert GITLAB (non-Chrome) 1`] = `
<DocumentFragment>
  <div
    class="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      class="d-flex align-items-center"
    >
      <p
        class="my-0 mr-3"
      >
        Get code intelligence while browsing files and reviewing merge requests on GitLab. 
        <a
          class="alertLink"
          href="/help/integration/browser_extension"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn more about Sourcegraph Chrome and Firefox extensions
        </a>
      </p>
    </div>
    <button
      aria-label="Close alert"
      class="btn btn-icon test-close-alert"
      type="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`InstallBrowserExtensionAlert PHABRICATOR (Chrome) 1`] = `
<DocumentFragment>
  <div
    class="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      class="d-flex align-items-center"
    >
      <p
        class="my-0 mr-3"
      >
        <a
          class="alertLink"
          href="https://chrome.google.com/webstore/detail/dgjhfomjieaadpoljlnidmbgkdffpack"
          rel="noopener noreferrer"
          target="_blank"
        >
          Install the Sourcegraph browser extension
        </a>
         to add code intelligence while browsing and reviewing code on Phabricator.
      </p>
    </div>
    <button
      aria-label="Close alert"
      class="btn btn-icon test-close-alert"
      type="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`InstallBrowserExtensionAlert PHABRICATOR (native integration) 1`] = `
<DocumentFragment>
  <div
    class="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      class="d-flex align-items-center"
    >
      <p
        class="my-0 mr-3"
      >
        Sourcegraph's code intelligence will follow you to your code host. Your site admin set up the Sourcegraph native integration for Phabricator. 
        <a
          class="alertLink"
          href="https://docs.sourcegraph.com/integration/browser_extension"
          rel="noopener"
          target="_blank"
        >
          Learn more
        </a>
         or 
        <a
          class="alertLink"
          href=""
          rel="noopener"
          target="_blank"
        >
          try it out
        </a>
      </p>
    </div>
    <button
      aria-label="Close alert"
      class="btn btn-icon test-close-alert"
      type="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`InstallBrowserExtensionAlert PHABRICATOR (non-Chrome) 1`] = `
<DocumentFragment>
  <div
    class="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      class="d-flex align-items-center"
    >
      <p
        class="my-0 mr-3"
      >
        Get code intelligence while browsing and reviewing code on Phabricator. 
        <a
          class="alertLink"
          href="/help/integration/browser_extension"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn more about Sourcegraph Chrome and Firefox extensions
        </a>
      </p>
    </div>
    <button
      aria-label="Close alert"
      class="btn btn-icon test-close-alert"
      type="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`InstallBrowserExtensionAlert none (Chrome) 1`] = `<DocumentFragment />`;

exports[`InstallBrowserExtensionAlert none (native integration) 1`] = `<DocumentFragment />`;

exports[`InstallBrowserExtensionAlert none (non-Chrome) 1`] = `<DocumentFragment />`;
